src/main/cshadow.rs

#[test]
fn bindgen_test_layout_SysCallReturnDone() {
    assert_eq!(
        ::std::mem::size_of::<SysCallReturnDone>(),
        16usize,
        concat!("Size of: ", stringify!(SysCallReturnDone))
    );
    assert_eq!(
        ::std::mem::align_of::<SysCallReturnDone>(),
        8usize,
        concat!("Alignment of ", stringify!(SysCallReturnDone))
    );
    fn test_field_retval() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<SysCallReturnDone>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).retval) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(SysCallReturnDone),
                "::",
                stringify!(retval)
            )
        );
    }
    test_field_retval();
    fn test_field_restartable() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<SysCallReturnDone>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).restartable) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(SysCallReturnDone),
                "::",
                stringify!(restartable)
            )
        );
    }
    test_field_restartable();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SysCallReturnBlocked {
    pub cond: *mut SysCallCondition,
    pub restartable: bool,
}
#[test]
fn bindgen_test_layout_SysCallReturnBlocked() {
    assert_eq!(
        ::std::mem::size_of::<SysCallReturnBlocked>(),
        16usize,
        concat!("Size of: ", stringify!(SysCallReturnBlocked))
    );
    assert_eq!(
        ::std::mem::align_of::<SysCallReturnBlocked>(),
        8usize,
        concat!("Alignment of ", stringify!(SysCallReturnBlocked))
    );
    fn test_field_cond() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<SysCallReturnBlocked>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).cond) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(SysCallReturnBlocked),
                "::",
                stringify!(cond)
            )
        );
    }
    test_field_cond();
    fn test_field_restartable() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<SysCallReturnBlocked>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).restartable) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(SysCallReturnBlocked),
                "::",
                stringify!(restartable)
            )
        );
    }
    test_field_restartable();
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union SysCallReturnBody {
    pub done: SysCallReturnDone,
    pub blocked: SysCallReturnBlocked,
}
#[test]
fn bindgen_test_layout_SysCallReturnBody() {
    assert_eq!(
        ::std::mem::size_of::<SysCallReturnBody>(),
        16usize,
        concat!("Size of: ", stringify!(SysCallReturnBody))
    );
    assert_eq!(
        ::std::mem::align_of::<SysCallReturnBody>(),
        8usize,
        concat!("Alignment of ", stringify!(SysCallReturnBody))
    );
    fn test_field_done() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<SysCallReturnBody>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).done) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(SysCallReturnBody),
                "::",
                stringify!(done)
            )
        );
    }
    test_field_done();
    fn test_field_blocked() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<SysCallReturnBody>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).blocked) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(SysCallReturnBody),
                "::",
                stringify!(blocked)
            )
        );
    }
    test_field_blocked();
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct _SysCallReturn {
    pub state: SysCallReturnState,
    pub u: SysCallReturnBody,
}
#[test]
fn bindgen_test_layout__SysCallReturn() {
    assert_eq!(
        ::std::mem::size_of::<_SysCallReturn>(),
        24usize,
        concat!("Size of: ", stringify!(_SysCallReturn))
    );
    assert_eq!(
        ::std::mem::align_of::<_SysCallReturn>(),
        8usize,
        concat!("Alignment of ", stringify!(_SysCallReturn))
    );
    fn test_field_state() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<_SysCallReturn>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).state) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(_SysCallReturn),
                "::",
                stringify!(state)
            )
        );
    }
    test_field_state();
    fn test_field_u() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<_SysCallReturn>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).u) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(_SysCallReturn),
                "::",
                stringify!(u)
            )
        );
    }
    test_field_u();
}
pub type SysCallReturn = _SysCallReturn;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SimulationTime {
    _unused: [u8; 0],
}
pub type CEmulatedTime = u64;
pub type CSimulationTime = u64;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Process {
    _unused: [u8; 0],
}
pub type Process = _Process;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Tsc {
    pub cyclesPerSecond: u64,
}
#[test]
fn bindgen_test_layout__Tsc() {
    assert_eq!(
        ::std::mem::size_of::<_Tsc>(),
        8usize,
        concat!("Size of: ", stringify!(_Tsc))
    );
    assert_eq!(
        ::std::mem::align_of::<_Tsc>(),
        8usize,
        concat!("Alignment of ", stringify!(_Tsc))
    );
    fn test_field_cyclesPerSecond() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<_Tsc>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).cyclesPerSecond) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(_Tsc),
                "::",
                stringify!(cyclesPerSecond)
            )
        );
    }
    test_field_cyclesPerSecond();
}
pub type Tsc = _Tsc;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _CPU {
    _unused: [u8; 0],
}
pub type CPU = _CPU;
pub type LegacyFile = [u64; 5usize];
pub type LegacyFileCloseFunc =
    ::std::option::Option<unsafe extern "C" fn(descriptor: *mut LegacyFile, host: *mut Host)>;
pub type LegacyFileCleanupFunc =
    ::std::option::Option<unsafe extern "C" fn(descriptor: *mut LegacyFile)>;
pub type LegacyFileFreeFunc =
    ::std::option::Option<unsafe extern "C" fn(descriptor: *mut LegacyFile)>;
pub use self::_Status as Status;
pub const _Status_STATUS_NONE: _Status = 0;
pub const _Status_STATUS_FILE_ACTIVE: _Status = 1;
pub const _Status_STATUS_FILE_READABLE: _Status = 2;
pub const _Status_STATUS_FILE_WRITABLE: _Status = 4;
pub const _Status_STATUS_FILE_CLOSED: _Status = 8;
pub const _Status_STATUS_FUTEX_WAKEUP: _Status = 16;
pub const _Status_STATUS_SOCKET_ALLOWING_CONNECT: _Status = 32;
pub type _Status = i32;
extern "C" {
    pub fn return_code_for_signal(signal: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _StatusListener {
    _unused: [u8; 0],
}
pub type StatusListener = _StatusListener;
extern "C" {
    pub fn statuslistener_ref(listener: *mut StatusListener);
}
extern "C" {
    pub fn statuslistener_unref(listener: *mut StatusListener);
}
extern "C" {
    pub fn statuslistener_onStatusChanged(
        listener: *mut StatusListener,
        currentStatus: Status,
        transitions: Status,
    );
}
pub type SysCallHandler = _SysCallHandler;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Thread {
    _unused: [u8; 0],
}
pub type Thread = _Thread;
extern "C" {
    pub fn thread_new(
        host: *mut Host,
        process: *mut Process,
        threadID: ::std::os::raw::c_int,
    ) -> *mut Thread;
}
extern "C" {
    pub fn thread_ref(thread: *mut Thread);
}
extern "C" {
    pub fn thread_unref(thread: *mut Thread);
}
extern "C" {
    pub fn thread_run(
        thread: *mut Thread,
        pluginPath: *mut ::std::os::raw::c_char,
        argv: *mut *mut ::std::os::raw::c_char,
        envv: *mut *mut ::std::os::raw::c_char,
        workingDir: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn thread_resume(thread: *mut Thread);
}
extern "C" {
    pub fn thread_handleProcessExit(thread: *mut Thread);
}
extern "C" {
    pub fn thread_getReturnCode(thread: *mut Thread) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn thread_nativeSyscall(
        thread: *mut Thread,
        n: ::std::os::raw::c_long,
        ...
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn thread_isRunning(thread: *mut Thread) -> bool;
}
extern "C" {
    pub fn thread_getProcessId(thread: *mut Thread) -> u32;
}
extern "C" {
    pub fn thread_getHostId(thread: *mut Thread) -> u32;
}
extern "C" {
    pub fn thread_getNativePid(thread: *mut Thread) -> pid_t;
}
extern "C" {
    pub fn thread_getNativeTid(thread: *mut Thread) -> pid_t;
}
extern "C" {
    pub fn thread_getID(thread: *mut Thread) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn thread_clone(
        thread: *mut Thread,
        flags: ::std::os::raw::c_ulong,
        child_stack: PluginPtr,
        ptid: PluginPtr,
        ctid: PluginPtr,
        newtls: ::std::os::raw::c_ulong,
        child: *mut *mut Thread,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn thread_setTidAddress(thread: *mut Thread, addr: PluginVirtualPtr);
}
extern "C" {
    pub fn thread_getTidAddress(thread: *mut Thread) -> PluginVirtualPtr;
}
extern "C" {
    pub fn thread_isLeader(thread: *mut Thread) -> bool;
}
extern "C" {
    pub fn thread_getIPCBlock(thread: *mut Thread) -> *mut ShMemBlock;
}
extern "C" {
    pub fn thread_getShMBlock(thread: *mut Thread) -> *mut ShMemBlock;
}
extern "C" {
    pub fn thread_getProcess(thread: *mut Thread) -> *mut Process;
}
extern "C" {
    pub fn thread_getHost(thread: *mut Thread) -> *mut Host;
}
extern "C" {
    pub fn thread_getSysCallHandler(thread: *mut Thread) -> *mut SysCallHandler;
}
extern "C" {
    pub fn thread_getSysCallCondition(thread: *mut Thread) -> *mut SysCallCondition;
}
extern "C" {
    pub fn thread_clearSysCallCondition(thread: *mut Thread);
}
extern "C" {
    pub fn thread_getSignalSet(thread: *mut Thread) -> *mut sigset_t;
}
extern "C" {
    pub fn thread_unblockedSignalPending(
        thread: *mut Thread,
        host_lock: *const ShimShmemHostLock,
    ) -> bool;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Tracker {
    _unused: [u8; 0],
}
